# maru_engine

./: .gitignore  CMakeLists.txt  bootstrap.py  build.py  publish.py
cmake/: maru-unity.cmake
config/: audio.json  engine.json
content/shader/: default.hlsl  single_fullscreen.hlsl  sprite.hlsl
scripts/: bootstrap.py
src/: CMakeLists.txt
src/framework/: CMakeLists.txt
src/framework/core/: CMakeSources.cmake  core.h  error.c  error.h  export.h  fs.c  fs.h  json.c  json.h  log.c  log.h  macro.h  time.c  time.h  types.h
src/framework/core/fs/: fs.c  fs.h  path.c  path.h
src/framework/core/handle/: handle_pool.c  handle_pool.h
src/framework/core/math/: math.h  proj.c  proj.h  transform.c  transform.h
src/framework/core/mem/: mem_diag.c  mem_diag.h  mem_frame.c  mem_frame.h
src/framework/core/misc/: cjson.c  cjson.h
src/framework/core/platform/: input.h  input_desktop.c  path.c  path.h  window.h  window_desktop.c  window_mobile.c
src/framework/core/plugin/: plugin.c  plugin.h
src/framework/core/thread/: mutex.c  mutex.h
src/framework/engine/: CMakeSources.cmake  config.c  config.h  engine.c  engine.h  engine_context.c  engine_context.h  module.h
src/framework/engine/asset/: asset.c  asset.h  importer.c  importer.h  mesh.c  mesh.h  sprite.c  sprite.h  texture.c  texture.h  texture_manager.c  texture_manager.h
src/framework/engine/asset/importers/: mesh_obj_importer.c  stb_image.h  texture_importer.c
src/framework/engine/material/: material.c  material.h
src/framework/engine/renderer/: render_object.c  render_object.h  renderer.c  renderer.h
src/framework/engine/rhi/: rhi.c  rhi.h
src/plugin/maru-al/: CMakeLists.txt  maru_al.c  maru_al.h
src/plugin/maru-dx11/: CMakeLists.txt  maru_dx11.c  maru_dx11.h
src/plugin/maru-dx11/rhi/: rhi_dx11.c  rhi_dx11.h
src/plugin/maru-gl/: CMakeLists.txt  maru_gl.c  maru_gl.h
src/plugin/maru-gl/rhi/: rhi_gl.c  rhi_gl.h
src/plugin/maru-gles/: CMakeLists.txt  maru_gles.c  maru_gles.h
src/plugin/maru-gles/rhi/: rhi_gles.c  rhi_gles.h
testbed/: CMakeLists.txt  CMakeSources.cmake
testbed/config/: engine.json  graphics.json
testbed/src/: main.c
